--- a/src/blocks/pill/style.scss
+++ b/src/blocks/pill/style.scss
@@ -72,6 +72,13 @@
 	line-height: 1.5;
 }
 
+// When inside a flex container (Row block), pill should shrink to fit content
+// rather than stretching to fill available space
+.is-layout-flex > .dsgo-pill,
+.is-layout-grid > .dsgo-pill {
+	width: fit-content;
+}
+
 // Alignment support - use flexbox to position the inner inline-block content
 // Important is needed to override Stack block's width: auto !important
 // Higher specificity selector to override Stack container rules
